--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: ACMI Audio Guide
+title: Test Audio Guide
 email: your-email@example.com
 description: > # this means to ignore newlines until "baseurl:"
   A web-based audio guide theme for Jekyll.
@@ -15,8 +15,8 @@ audio_path: "/audio/"
 episode_hero_path: "/assets/img/stops/"
 url: "https://sadia-qm-github.github.io" # the base hostname & protocol for your site
 logo: "/assets/img/logo/audio-guide.png"
-twitter_username: acmilabs
-github_username:  acmilabs
+twitter_username: 
+github_username:  
 menu_heading: "Select another stop"
 index_page_text: "Select an audio guide stop to begin."
 headphones_icon_color: "/assets/img/icons/headphones-dark.png"
